z3Parser.output
   0  $accept : %entry% $end

   1  toplevel : IDENT LPAREN IDENT definefun_list RPAREN EOF
   2           | IDENT LPAREN IDENT RPAREN EOF

   3  definefun_list : definefun
   4                 | definefun definefun_list

   5  definefun : LPAREN IDENT IDENT LPAREN ident_type_list RPAREN IDENT value RPAREN
   6            | LPAREN IDENT IDENT LPAREN RPAREN IDENT value RPAREN

   7  ident_type_list : LPAREN IDENT IDENT RPAREN
   8                  | LPAREN IDENT IDENT RPAREN ident_type_list

   9  value_list : value
  10             | value value_list

  11  value : IDENT
  12        | BOOL
  13        | INT
  14        | LPAREN NOT value_list RPAREN
  15        | LPAREN AND value_list RPAREN
  16        | LPAREN OR value_list RPAREN
  17        | LPAREN EQ value_list RPAREN
  18        | LPAREN LT value_list RPAREN
  19        | LPAREN GT value_list RPAREN
  20        | LPAREN LE value_list RPAREN
  21        | LPAREN GE value_list RPAREN
  22        | LPAREN PLUS value_list RPAREN
  23        | LPAREN MINUS value_list RPAREN
  24        | LPAREN AST value_list RPAREN
  25        | LPAREN SLASH value_list RPAREN
  26        | LPAREN EXISTS LPAREN ident_type_list RPAREN value RPAREN
  27        | LPAREN IDENT value_list RPAREN
  28        | LPAREN IDENT RPAREN
  29        | LPAREN LET LPAREN let_list RPAREN value RPAREN
  30        | LPAREN EXCLAMATION value WEIGHT INT RPAREN

  31  let_list : LPAREN IDENT value RPAREN
  32           | LPAREN IDENT value RPAREN let_list

  33  %entry% : '\001' toplevel

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . toplevel  (33)

	IDENT  shift 3
	.  error

	toplevel  goto 4


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	toplevel : IDENT . LPAREN IDENT definefun_list RPAREN EOF  (1)
	toplevel : IDENT . LPAREN IDENT RPAREN EOF  (2)

	LPAREN  shift 5
	.  error


state 4
	%entry% : '\001' toplevel .  (33)

	.  reduce 33


state 5
	toplevel : IDENT LPAREN . IDENT definefun_list RPAREN EOF  (1)
	toplevel : IDENT LPAREN . IDENT RPAREN EOF  (2)

	IDENT  shift 6
	.  error


state 6
	toplevel : IDENT LPAREN IDENT . definefun_list RPAREN EOF  (1)
	toplevel : IDENT LPAREN IDENT . RPAREN EOF  (2)

	LPAREN  shift 7
	RPAREN  shift 8
	.  error

	definefun_list  goto 9
	definefun  goto 10


state 7
	definefun : LPAREN . IDENT IDENT LPAREN ident_type_list RPAREN IDENT value RPAREN  (5)
	definefun : LPAREN . IDENT IDENT LPAREN RPAREN IDENT value RPAREN  (6)

	IDENT  shift 11
	.  error


state 8
	toplevel : IDENT LPAREN IDENT RPAREN . EOF  (2)

	EOF  shift 12
	.  error


state 9
	toplevel : IDENT LPAREN IDENT definefun_list . RPAREN EOF  (1)

	RPAREN  shift 13
	.  error


state 10
	definefun_list : definefun .  (3)
	definefun_list : definefun . definefun_list  (4)

	LPAREN  shift 7
	RPAREN  reduce 3

	definefun_list  goto 14
	definefun  goto 10


state 11
	definefun : LPAREN IDENT . IDENT LPAREN ident_type_list RPAREN IDENT value RPAREN  (5)
	definefun : LPAREN IDENT . IDENT LPAREN RPAREN IDENT value RPAREN  (6)

	IDENT  shift 15
	.  error


state 12
	toplevel : IDENT LPAREN IDENT RPAREN EOF .  (2)

	.  reduce 2


state 13
	toplevel : IDENT LPAREN IDENT definefun_list RPAREN . EOF  (1)

	EOF  shift 16
	.  error


state 14
	definefun_list : definefun definefun_list .  (4)

	.  reduce 4


state 15
	definefun : LPAREN IDENT IDENT . LPAREN ident_type_list RPAREN IDENT value RPAREN  (5)
	definefun : LPAREN IDENT IDENT . LPAREN RPAREN IDENT value RPAREN  (6)

	LPAREN  shift 17
	.  error


state 16
	toplevel : IDENT LPAREN IDENT definefun_list RPAREN EOF .  (1)

	.  reduce 1


state 17
	definefun : LPAREN IDENT IDENT LPAREN . ident_type_list RPAREN IDENT value RPAREN  (5)
	definefun : LPAREN IDENT IDENT LPAREN . RPAREN IDENT value RPAREN  (6)

	LPAREN  shift 18
	RPAREN  shift 19
	.  error

	ident_type_list  goto 20


state 18
	ident_type_list : LPAREN . IDENT IDENT RPAREN  (7)
	ident_type_list : LPAREN . IDENT IDENT RPAREN ident_type_list  (8)

	IDENT  shift 21
	.  error


state 19
	definefun : LPAREN IDENT IDENT LPAREN RPAREN . IDENT value RPAREN  (6)

	IDENT  shift 22
	.  error


state 20
	definefun : LPAREN IDENT IDENT LPAREN ident_type_list . RPAREN IDENT value RPAREN  (5)

	RPAREN  shift 23
	.  error


state 21
	ident_type_list : LPAREN IDENT . IDENT RPAREN  (7)
	ident_type_list : LPAREN IDENT . IDENT RPAREN ident_type_list  (8)

	IDENT  shift 24
	.  error


state 22
	definefun : LPAREN IDENT IDENT LPAREN RPAREN IDENT . value RPAREN  (6)

	IDENT  shift 25
	BOOL  shift 26
	INT  shift 27
	LPAREN  shift 28
	.  error

	value  goto 29


state 23
	definefun : LPAREN IDENT IDENT LPAREN ident_type_list RPAREN . IDENT value RPAREN  (5)

	IDENT  shift 30
	.  error


state 24
	ident_type_list : LPAREN IDENT IDENT . RPAREN  (7)
	ident_type_list : LPAREN IDENT IDENT . RPAREN ident_type_list  (8)

	RPAREN  shift 31
	.  error


state 25
	value : IDENT .  (11)

	.  reduce 11


state 26
	value : BOOL .  (12)

	.  reduce 12


state 27
	value : INT .  (13)

	.  reduce 13


state 28
	value : LPAREN . NOT value_list RPAREN  (14)
	value : LPAREN . AND value_list RPAREN  (15)
	value : LPAREN . OR value_list RPAREN  (16)
	value : LPAREN . EQ value_list RPAREN  (17)
	value : LPAREN . LT value_list RPAREN  (18)
	value : LPAREN . GT value_list RPAREN  (19)
	value : LPAREN . LE value_list RPAREN  (20)
	value : LPAREN . GE value_list RPAREN  (21)
	value : LPAREN . PLUS value_list RPAREN  (22)
	value : LPAREN . MINUS value_list RPAREN  (23)
	value : LPAREN . AST value_list RPAREN  (24)
	value : LPAREN . SLASH value_list RPAREN  (25)
	value : LPAREN . EXISTS LPAREN ident_type_list RPAREN value RPAREN  (26)
	value : LPAREN . IDENT value_list RPAREN  (27)
	value : LPAREN . IDENT RPAREN  (28)
	value : LPAREN . LET LPAREN let_list RPAREN value RPAREN  (29)
	value : LPAREN . EXCLAMATION value WEIGHT INT RPAREN  (30)

	IDENT  shift 32
	NOT  shift 33
	AND  shift 34
	OR  shift 35
	EQ  shift 36
	LT  shift 37
	GT  shift 38
	LE  shift 39
	GE  shift 40
	PLUS  shift 41
	MINUS  shift 42
	AST  shift 43
	SLASH  shift 44
	EXISTS  shift 45
	LET  shift 46
	EXCLAMATION  shift 47
	.  error


state 29
	definefun : LPAREN IDENT IDENT LPAREN RPAREN IDENT value . RPAREN  (6)

	RPAREN  shift 48
	.  error


state 30
	definefun : LPAREN IDENT IDENT LPAREN ident_type_list RPAREN IDENT . value RPAREN  (5)

	IDENT  shift 25
	BOOL  shift 26
	INT  shift 27
	LPAREN  shift 28
	.  error

	value  goto 49


state 31
	ident_type_list : LPAREN IDENT IDENT RPAREN .  (7)
	ident_type_list : LPAREN IDENT IDENT RPAREN . ident_type_list  (8)

	LPAREN  shift 18
	RPAREN  reduce 7

	ident_type_list  goto 50


state 32
	value : LPAREN IDENT . value_list RPAREN  (27)
	value : LPAREN IDENT . RPAREN  (28)

	IDENT  shift 25
	BOOL  shift 26
	INT  shift 27
	LPAREN  shift 28
	RPAREN  shift 51
	.  error

	value  goto 52
	value_list  goto 53


state 33
	value : LPAREN NOT . value_list RPAREN  (14)

	IDENT  shift 25
	BOOL  shift 26
	INT  shift 27
	LPAREN  shift 28
	.  error

	value  goto 52
	value_list  goto 54


state 34
	value : LPAREN AND . value_list RPAREN  (15)

	IDENT  shift 25
	BOOL  shift 26
	INT  shift 27
	LPAREN  shift 28
	.  error

	value  goto 52
	value_list  goto 55


state 35
	value : LPAREN OR . value_list RPAREN  (16)

	IDENT  shift 25
	BOOL  shift 26
	INT  shift 27
	LPAREN  shift 28
	.  error

	value  goto 52
	value_list  goto 56


state 36
	value : LPAREN EQ . value_list RPAREN  (17)

	IDENT  shift 25
	BOOL  shift 26
	INT  shift 27
	LPAREN  shift 28
	.  error

	value  goto 52
	value_list  goto 57


state 37
	value : LPAREN LT . value_list RPAREN  (18)

	IDENT  shift 25
	BOOL  shift 26
	INT  shift 27
	LPAREN  shift 28
	.  error

	value  goto 52
	value_list  goto 58


state 38
	value : LPAREN GT . value_list RPAREN  (19)

	IDENT  shift 25
	BOOL  shift 26
	INT  shift 27
	LPAREN  shift 28
	.  error

	value  goto 52
	value_list  goto 59


state 39
	value : LPAREN LE . value_list RPAREN  (20)

	IDENT  shift 25
	BOOL  shift 26
	INT  shift 27
	LPAREN  shift 28
	.  error

	value  goto 52
	value_list  goto 60


state 40
	value : LPAREN GE . value_list RPAREN  (21)

	IDENT  shift 25
	BOOL  shift 26
	INT  shift 27
	LPAREN  shift 28
	.  error

	value  goto 52
	value_list  goto 61


state 41
	value : LPAREN PLUS . value_list RPAREN  (22)

	IDENT  shift 25
	BOOL  shift 26
	INT  shift 27
	LPAREN  shift 28
	.  error

	value  goto 52
	value_list  goto 62


state 42
	value : LPAREN MINUS . value_list RPAREN  (23)

	IDENT  shift 25
	BOOL  shift 26
	INT  shift 27
	LPAREN  shift 28
	.  error

	value  goto 52
	value_list  goto 63


state 43
	value : LPAREN AST . value_list RPAREN  (24)

	IDENT  shift 25
	BOOL  shift 26
	INT  shift 27
	LPAREN  shift 28
	.  error

	value  goto 52
	value_list  goto 64


state 44
	value : LPAREN SLASH . value_list RPAREN  (25)

	IDENT  shift 25
	BOOL  shift 26
	INT  shift 27
	LPAREN  shift 28
	.  error

	value  goto 52
	value_list  goto 65


state 45
	value : LPAREN EXISTS . LPAREN ident_type_list RPAREN value RPAREN  (26)

	LPAREN  shift 66
	.  error


state 46
	value : LPAREN LET . LPAREN let_list RPAREN value RPAREN  (29)

	LPAREN  shift 67
	.  error


state 47
	value : LPAREN EXCLAMATION . value WEIGHT INT RPAREN  (30)

	IDENT  shift 25
	BOOL  shift 26
	INT  shift 27
	LPAREN  shift 28
	.  error

	value  goto 68


state 48
	definefun : LPAREN IDENT IDENT LPAREN RPAREN IDENT value RPAREN .  (6)

	.  reduce 6


state 49
	definefun : LPAREN IDENT IDENT LPAREN ident_type_list RPAREN IDENT value . RPAREN  (5)

	RPAREN  shift 69
	.  error


state 50
	ident_type_list : LPAREN IDENT IDENT RPAREN ident_type_list .  (8)

	.  reduce 8


state 51
	value : LPAREN IDENT RPAREN .  (28)

	.  reduce 28


state 52
	value_list : value .  (9)
	value_list : value . value_list  (10)

	IDENT  shift 25
	BOOL  shift 26
	INT  shift 27
	LPAREN  shift 28
	RPAREN  reduce 9

	value  goto 52
	value_list  goto 70


state 53
	value : LPAREN IDENT value_list . RPAREN  (27)

	RPAREN  shift 71
	.  error


state 54
	value : LPAREN NOT value_list . RPAREN  (14)

	RPAREN  shift 72
	.  error


state 55
	value : LPAREN AND value_list . RPAREN  (15)

	RPAREN  shift 73
	.  error


state 56
	value : LPAREN OR value_list . RPAREN  (16)

	RPAREN  shift 74
	.  error


state 57
	value : LPAREN EQ value_list . RPAREN  (17)

	RPAREN  shift 75
	.  error


state 58
	value : LPAREN LT value_list . RPAREN  (18)

	RPAREN  shift 76
	.  error


state 59
	value : LPAREN GT value_list . RPAREN  (19)

	RPAREN  shift 77
	.  error


state 60
	value : LPAREN LE value_list . RPAREN  (20)

	RPAREN  shift 78
	.  error


state 61
	value : LPAREN GE value_list . RPAREN  (21)

	RPAREN  shift 79
	.  error


state 62
	value : LPAREN PLUS value_list . RPAREN  (22)

	RPAREN  shift 80
	.  error


state 63
	value : LPAREN MINUS value_list . RPAREN  (23)

	RPAREN  shift 81
	.  error


state 64
	value : LPAREN AST value_list . RPAREN  (24)

	RPAREN  shift 82
	.  error


state 65
	value : LPAREN SLASH value_list . RPAREN  (25)

	RPAREN  shift 83
	.  error


state 66
	value : LPAREN EXISTS LPAREN . ident_type_list RPAREN value RPAREN  (26)

	LPAREN  shift 18
	.  error

	ident_type_list  goto 84


state 67
	value : LPAREN LET LPAREN . let_list RPAREN value RPAREN  (29)

	LPAREN  shift 85
	.  error

	let_list  goto 86


state 68
	value : LPAREN EXCLAMATION value . WEIGHT INT RPAREN  (30)

	WEIGHT  shift 87
	.  error


state 69
	definefun : LPAREN IDENT IDENT LPAREN ident_type_list RPAREN IDENT value RPAREN .  (5)

	.  reduce 5


state 70
	value_list : value value_list .  (10)

	.  reduce 10


state 71
	value : LPAREN IDENT value_list RPAREN .  (27)

	.  reduce 27


state 72
	value : LPAREN NOT value_list RPAREN .  (14)

	.  reduce 14


state 73
	value : LPAREN AND value_list RPAREN .  (15)

	.  reduce 15


state 74
	value : LPAREN OR value_list RPAREN .  (16)

	.  reduce 16


state 75
	value : LPAREN EQ value_list RPAREN .  (17)

	.  reduce 17


state 76
	value : LPAREN LT value_list RPAREN .  (18)

	.  reduce 18


state 77
	value : LPAREN GT value_list RPAREN .  (19)

	.  reduce 19


state 78
	value : LPAREN LE value_list RPAREN .  (20)

	.  reduce 20


state 79
	value : LPAREN GE value_list RPAREN .  (21)

	.  reduce 21


state 80
	value : LPAREN PLUS value_list RPAREN .  (22)

	.  reduce 22


state 81
	value : LPAREN MINUS value_list RPAREN .  (23)

	.  reduce 23


state 82
	value : LPAREN AST value_list RPAREN .  (24)

	.  reduce 24


state 83
	value : LPAREN SLASH value_list RPAREN .  (25)

	.  reduce 25


state 84
	value : LPAREN EXISTS LPAREN ident_type_list . RPAREN value RPAREN  (26)

	RPAREN  shift 88
	.  error


state 85
	let_list : LPAREN . IDENT value RPAREN  (31)
	let_list : LPAREN . IDENT value RPAREN let_list  (32)

	IDENT  shift 89
	.  error


state 86
	value : LPAREN LET LPAREN let_list . RPAREN value RPAREN  (29)

	RPAREN  shift 90
	.  error


state 87
	value : LPAREN EXCLAMATION value WEIGHT . INT RPAREN  (30)

	INT  shift 91
	.  error


state 88
	value : LPAREN EXISTS LPAREN ident_type_list RPAREN . value RPAREN  (26)

	IDENT  shift 25
	BOOL  shift 26
	INT  shift 27
	LPAREN  shift 28
	.  error

	value  goto 92


state 89
	let_list : LPAREN IDENT . value RPAREN  (31)
	let_list : LPAREN IDENT . value RPAREN let_list  (32)

	IDENT  shift 25
	BOOL  shift 26
	INT  shift 27
	LPAREN  shift 28
	.  error

	value  goto 93


state 90
	value : LPAREN LET LPAREN let_list RPAREN . value RPAREN  (29)

	IDENT  shift 25
	BOOL  shift 26
	INT  shift 27
	LPAREN  shift 28
	.  error

	value  goto 94


state 91
	value : LPAREN EXCLAMATION value WEIGHT INT . RPAREN  (30)

	RPAREN  shift 95
	.  error


state 92
	value : LPAREN EXISTS LPAREN ident_type_list RPAREN value . RPAREN  (26)

	RPAREN  shift 96
	.  error


state 93
	let_list : LPAREN IDENT value . RPAREN  (31)
	let_list : LPAREN IDENT value . RPAREN let_list  (32)

	RPAREN  shift 97
	.  error


state 94
	value : LPAREN LET LPAREN let_list RPAREN value . RPAREN  (29)

	RPAREN  shift 98
	.  error


state 95
	value : LPAREN EXCLAMATION value WEIGHT INT RPAREN .  (30)

	.  reduce 30


state 96
	value : LPAREN EXISTS LPAREN ident_type_list RPAREN value RPAREN .  (26)

	.  reduce 26


state 97
	let_list : LPAREN IDENT value RPAREN .  (31)
	let_list : LPAREN IDENT value RPAREN . let_list  (32)

	LPAREN  shift 85
	RPAREN  reduce 31

	let_list  goto 99


state 98
	value : LPAREN LET LPAREN let_list RPAREN value RPAREN .  (29)

	.  reduce 29


state 99
	let_list : LPAREN IDENT value RPAREN let_list .  (32)

	.  reduce 32


25 terminals, 9 nonterminals
34 grammar rules, 100 states
